fix the postion and hover of the back to the top button, better visiblity

--- a/public/styles/footer.css
+++ b/public/styles/footer.css
@@ -2,12 +2,12 @@
   background-color: #4056A1;
   color: white;
   position: fixed;
-  right: 1.5rem;
+  right: 1.1rem;
   bottom: .5rem;
   padding: 1rem;
   border-radius: 10%;
 }
 
 .back-to-top:hover {
-  color: #e49c18;
+  background-color: #e49c18;
 }
